cabal-version:      3.0
name:               veterator
version:            0.1.0.0
synopsis:           7DRL entry
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Liam Dyer
maintainer:         liamd94@gmail.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable veterator
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Display,
        Display.View,
        Display.Component,
        Input,
        Time,
        Game,
        GameState,
        Gen.Dungeon,
        Resources,
        Data.Extra.List,
        Data.Extra.Maybe,
        Data.Extra.Tuple,
        Math.Geometry.Extra.GridMap,
        Veterator.Model.Dungeon,
        Veterator.Model.Creature,
        Veterator.Views


    build-depends:    
        base ^>=4.17.2.1,
        containers,
        linear >=1.10.1.2 && <1.23,
        sdl2 >= 2.5.5.0,
        sdl2-image >= 2.1.0.0,
        sdl2-ttf >= 2.1.3,
        Yampa >= 0.15,
        random >= 1.2 && < 1.3,
        MonadRandom >= 0.6,
        grid >= 7.8.15,
        vector >= 0.13,
        uuid >= 1.3,
        mtl >= 2.3

    hs-source-dirs:   app
    default-language: Haskell2010

    default-extensions:
        OverloadedStrings
