cabal-version:      3.0
name:               veterator
version:            0.1.0.0
synopsis:           roguelike
author:             Liam Dyer
maintainer:         liamd94@gmail.com
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable veterator
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010

    build-depends:
        base ^>=4.17.2.1,
        veterator

library
    import:           warnings
    exposed-modules:
        Veterator,
        Veterator.Algorithm,
    other-modules:
        Data.IdentityList,
        Data.IntervalSet,
        Data.Extra.List,
        Data.Extra.Maybe,
        Data.Extra.Tuple,
        Display,
        Display.View,
        Display.Component,
        Input,
        Time,
        FRP,
        Game,
        GameState,
        Gen.Dungeon,
        Resources,
        Math.Geometry.Extra.GridMap,
        Veterator.AI,
        Veterator.Direction,
        Veterator.Model.Dungeon,
        Veterator.Model.Creature,
        Veterator.Views,
        Veterator.Events,
        Debug.Extra


    build-depends:    
        base ^>=4.17.2.1,
        text,
        containers,
        linear >=1.10.1.2 && <1.23,
        sdl2 >= 2.5.5.0,
        sdl2-image >= 2.1.0.0,
        sdl2-ttf >= 2.1.3,
        Yampa >= 0.15,
        random >= 1.2 && < 1.3,
        MonadRandom >= 0.6,
        grid >= 7.8.15,
        vector >= 0.13,
        uuid >= 1.3,
        mtl >= 2.3,
        pqueue >= 1.5.0.0

    hs-source-dirs:   src
    default-language: Haskell2010

    default-extensions:
        OverloadedStrings

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -Wall
  build-depends:
      base ==4.*
    , hspec ==2.*
    , hspec-hedgehog == 0.3.0.0
    , hedgehog >= 1.5
    , grid >= 7.8.15
    , veterator
  other-modules:
      Veterator.AlgorithmSpec
  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover == 2.*